more progress on formalizing the model

--- a/articles/er-evaluation-models/er-related-work.bib
+++ b/articles/er-evaluation-models/er-related-work.bib
@@ -54,6 +54,17 @@ publisher={The Australian National University}
   publisher={VLDB Endowment}
 }
 
+@article{vldb2010,
+  title={Evaluation of entity resolution approaches on real-world match problems},
+  author={K{\"o}pcke, Hanna and Thor, Andreas and Rahm, Erhard},
+  journal={Proceedings of the VLDB Endowment},
+  volume={3},
+  number={1-2},
+  pages={484--493},
+  year={2010},
+  publisher={VLDB Endowment}
+}
+
 @misc{oyster2012,
   author = {University of Arkansas Little Rock, ERIQ},
   title = {OYSTER},
