add f-s model experiment

--- a/articles/er-evaluation-models/er-additional-references.bib
+++ b/articles/er-evaluation-models/er-additional-references.bib
@@ -112,3 +112,14 @@ address = {Honolulu},
 title = {Entity alignment between knowledge graphs using attribute embeddings},
 year = {2019}
 }
+
+@article{ppjoin,
+  title={Efficient similarity joins for near-duplicate detection},
+  author={Xiao, Chuan and Wang, Wei and Lin, Xuemin and Yu, Jeffrey Xu and Wang, Guoren},
+  journal={ACM Transactions on Database Systems (TODS)},
+  volume={36},
+  number={3},
+  pages={1--41},
+  year={2011},
+  publisher={ACM New York, NY, USA}
+}
